refactor: produce messages asynchronously